<resources>
    <string name="app_name">Buzzwords</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title">Buzzwords</string>
    <string name="trendingStr">Trending Buzzwords</string>
    <string name="MoreText">See More</string>
    <string name="searchStr">...or search for a trending word</string>
    <string name="searchTxt">Search for a buzzword in the news</string>
    <string name="wotdTxt">Word of the Day</string>
    <string name="settingsStr">Settings</string>
    <string name="aboutStr">About</string>
    <string name="contactStr">Contact Us</string>
    <string name="copyrightTxt">Buzzwords Inc. 2023</string>
    <string name="poggersTest"><b><u>Poggers</u></b></string>
    <string name="searchBoxStr">Search Word</string>
    <string name="okayStr">Okay</string>
    <string name="contactTxtStr">Feel free to contact us at buzzwordsapp@gmail.com</string>
    <string name="trending1Template">Trending Word 1</string>
    <string name="trending2Template">Trending Word 2</string>
    <string name="trending3Template">Trending Word 3</string>
    <string name="trending4Template">Trending Word 4</string>
    <string name="trending5Template">Trending Word 5</string>
    <string name="wotdTemplate">Buzzword</string>
    <string name="trending1TempDef">Definition 1</string>
    <string name="trending2TempDef">Definition 2</string>
    <string name="trending3TempDef">Definition 3</string>
    <string name="trending4TempDef">Definition 4</string>
    <string name="trending5TempDef">Definition 5</string>
    <string name="wotdTempDef">A word commonly found in contemporary sources.</string>
    <string name="searchedWordTemplate">Similar word to word</string>
    <string name="searchedDefinitionTemplate">Definition goes here.</string>
    <string name="word">Word</string>
    <string name="aboutUsText">Buzzwords aims to extract the main keywords in the media. It scans a variety of financial, scientific, or political news sources for the most frequent terminology. Then, it compiles these words into a regularly updated interface where users can quickly and easily view their definitions.</string>
    <string name="ourNames">Buzzwords was created in early 2023 by Alex Chen, Shivani Parmar, and Thomas Park, each of Massachusetts Academy of Math and Science. This project was under the Apps For Good Project, under supervision from Mrs. Angela Taricco.</string>
    <string name="buzzyCaption">This is Buzzy! They\'re the app\'s mascot. They are inspired from the word \"buzzsaw\", a circular saw. Thus, they have 8 spikes to show they\'re tough enough to handle the news!</string>
    <string name="homeTxt">Home</string>
    <string name="headlinesTitle"><u>Headlines</u></string>
    <string name="definitionsTitle"><u>Definitions</u></string>
    <string name="allHeadlinesStr">Headlines with URLs go here.</string>
</resources>