<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/TopCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buzzblue"
            android:clickable="true"
            android:layerType="none"
            android:minHeight="?attr/actionBarSize"
            android:onClick="returnToMain"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/buzzyiconsmallest"
            app:title="@string/title"
            app:titleTextColor="#FFFFFF" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/ScrollableView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/TallBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/MainBody"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ContactUsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/aboutStr"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="60sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ContactTxt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/brawler"
                    android:text="@string/aboutUsText"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ContactUsTitle" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="284dp"
                    android:layout_height="241dp"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/buzzyopen"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ContactTxt1" />

                <TextView
                    android:id="@+id/buzzyCaption"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/buzzyCaption"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/ContactTxt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/brawler"
                    android:text="@string/ourNames"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buzzyCaption" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>