<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alwaysDrawnWithCache="false"
        android:fadingEdge="none"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/TopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buzzblue"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/title"
            app:titleTextColor="#FFFFFF" />

        <com.google.android.material.chip.Chip
            android:id="@+id/TrendingTitle"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:fontFamily="sans-serif"
            android:text="@string/trendingStr"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:chipBackgroundColor="#BE5271FF" />

        <LinearLayout
            android:id="@+id/TrendingWord1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="123dp"
                android:layout_height="145dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TrendingWord1Txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Poggers (interjection)"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TrendingWord1Def"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Used to express excitement or joy" />
            </LinearLayout>

            <Button
                android:id="@+id/SeeMoreTrending1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/buzzblue"
                android:rotationY="-15"
                android:text="@string/MoreText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TrendingWord2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="123dp"
                android:layout_height="145dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TrendingWord2Txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Debt ceiling (noun)"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TrendingWord2Def"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Amount of debt which a treasury is allowed to incur" />
            </LinearLayout>

            <Button
                android:id="@+id/SeeMoreTrending2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/buzzblue"
                android:rotationY="-15"
                android:text="@string/MoreText" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>