<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/WordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DefinitionActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/TopCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buzzblue"
            android:clickable="true"
            android:layerType="none"
            android:minHeight="?attr/actionBarSize"
            android:onClick="returnToMain"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/buzzyiconsmallest"
            app:title="@string/title"
            app:titleTextColor="#FFFFFF" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/ScrollableView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/TallBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/DefinitionArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/TheBuzzword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="75dp"
                    android:clickable="false"
                    android:fontFamily="@font/brawler"
                    android:text="@string/poggersTest"
                    android:textColor="#000000"
                    android:textIsSelectable="true"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/definitionsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/lato_bold"
                    android:includeFontPadding="false"
                    android:text="@string/definitionsTitle"
                    android:textColor="#000000"
                    android:textSize="35sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/TheBuzzword" />

                <TextView
                    android:id="@+id/BuzzwordDef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:clickable="false"
                    android:fontFamily="@font/brawler"
                    android:text="an Internet slang term used to express enthusiasm, mostly among online gamers"
                    android:textColor="#000000"
                    android:textIsSelectable="true"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/definitionsTitle" />

                <TextView
                    android:id="@+id/headlinesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/lato_bold"
                    android:includeFontPadding="false"
                    android:text="@string/headlinesTitle"
                    android:textColor="#000000"
                    android:textSize="35sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/BuzzwordDef" />

                <TextView
                    android:id="@+id/BuzzwordHead1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:clickable="false"
                    android:fontFamily="@font/brawler"
                    android:linksClickable="true"
                    android:text="@string/allHeadlinesStr"
                    android:textColor="#000000"
                    android:textColorLink="@color/buzzblue"
                    android:textIsSelectable="true"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/headlinesTitle" />

                <TextView
                    android:id="@+id/BuzzwordHead2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:clickable="false"
                    android:fontFamily="@font/brawler"
                    android:linksClickable="true"
                    android:text="@string/allHeadlinesStr"
                    android:textColor="#000000"
                    android:textColorLink="@color/buzzblue"
                    android:textIsSelectable="true"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/BuzzwordHead1" />

                <TextView
                    android:id="@+id/BuzzwordHead3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:clickable="false"
                    android:fontFamily="@font/brawler"
                    android:linksClickable="true"
                    android:text="@string/allHeadlinesStr"
                    android:textColor="#000000"
                    android:textColorLink="@color/buzzblue"
                    android:textIsSelectable="true"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/BuzzwordHead2" />

                <TextView
                    android:id="@+id/BuzzwordHead4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:clickable="false"
                    android:fontFamily="@font/brawler"
                    android:linksClickable="true"
                    android:text="@string/allHeadlinesStr"
                    android:textColor="#000000"
                    android:textColorLink="@color/buzzblue"
                    android:textIsSelectable="true"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/BuzzwordHead3" />

                <TextView
                    android:id="@+id/BuzzwordHead5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="25dp"
                    android:clickable="false"
                    android:fontFamily="@font/brawler"
                    android:linksClickable="true"
                    android:text="@string/allHeadlinesStr"
                    android:textColor="#000000"
                    android:textColorLink="@color/buzzblue"
                    android:textIsSelectable="true"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/BuzzwordHead4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>